--- a/app/config.ini
+++ b/app/config.ini
@@ -1,12 +1,12 @@
 ; The URL of your blog
 
-site.url = http://demo.tutorialzine.com/2013/03/simple-php-blogging-system/
+site.url = http://boreddev.com
 
 ; Blog info
 
-blog.title = "Tutorialzine Demo Blog"
-blog.description = "This is a lightweight and responsive blogging system powered by markdown. Read more about it on <a href="http://tutorialzine.com/2013/03/simple-php-blogging-system/">our site</a>."
-blog.authorbio = "Created by <b>Tutorialzine</b> with love for the community."
+blog.title = "BoredDev Simple Blog"
+blog.description = "A Simple Blog Script for you to build from"
+blog.authorbio = "BoredDev.com"
 
 posts.perpage = 5
 
